frontend/static/style.css
@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;600&family=Open+Sans:wght@300;400;700&display=swap');

:root {
  --global-transition: 150ms color linear, 200ms background-color ease-in-out,
    150ms width linear, 200ms border-color linear, transform 200ms linear,
    margin 220ms linear, 150ms opacity linear, 150ms box-shadow linear;
  --color-white: #ffffff;
  --color-dark: #232527;
}

.theme-light {
  --color-primary: #21222a;
  --color-secondary: #f1faee;
  --color-gray: #626262;
  --font-color: #000000;
}

.theme-dark {
  --color-primary: #e2e2e1;
  --color-secondary: #21222a;
  --color-gray: #6c6c6c;
  --font-color: #d4d4d4;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  transition: var(--global-transition);
}

html {
  scroll-behavior: smooth;
}

body {
  background-color: var(--color-secondary);
  width: 100%;
  height: 100vh;
  font-size: 16px;
  line-height: 24px;
  font-family: 'Open Sans', 'sans-serif';
  padding: 10px 0;
}

.icon-btn {
  font-size: 16px;
  background-color: transparent;
  border: none;
  cursor: pointer;
}

/* Main Container */
.container {
  max-width: 1290px;
  width: 100%;
  margin: 10px auto;
  padding: 10px 12px;
}

.header,
.options-container {
  max-width: 600px;
  margin: 0 auto;
}

/* Header Container */
.header {
  margin: 20px auto;
  padding: 5px 0;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

/* Theme Toggler */
.toggle-btn {
  cursor: pointer;
  width: 38px;
  height: 21px;
  border: 2px solid var(--color-primary);
  display: flex;
  justify-content: flex-start;
  align-items: center;
  border-radius: 40px;
  padding: 0 3px;
}

.toggle-dot {
  width: 14px;
  height: 14px;
  background-color: var(--color-primary);
  border-radius: 40px;
}

.theme-dark .toggle-btn {
  justify-content: flex-end;
}
/* Theme Toggler */

/* Header Logo */
.logo-text {
  color: var(--color-primary);
  font-family: 'Nunito', sans-serif;
  user-select: none;
  text-decoration: none;
  font-size: 32px;
  line-height: 40px;
  font-weight: 600;
  position: relative;
  text-transform: capitalize;
  letter-spacing: 1px;
}

.logo-text::after {
  content: '';
  position: absolute;
  bottom: -4px;
  left: 50%;
  transform: translateX(-50%);
  width: 0%;
  border-radius: 40px;
  height: 2px;
  transition: inherit;
  background-color: var(--color-primary);
}

.logo-text:hover::after {
  width: 80%;
}
/* Header Logo */

/* Search and Add Notes */
.options-container {
  margin-bottom: 40px;
  display: flex;
  gap: 13px;
}

.search-notes,
.add-notes,
.btn {
  border-radius: 5.5px;
  box-shadow: rgba(0, 0, 0, 0.2) 0px 0px 0px 1px;
}

.btn {
  width: 100%;
  max-width: 100px;
  min-width: fit-content;
  outline-color: transparent;
  border: 2px solid transparent;
  line-height: inherit;
  cursor: pointer;
  font-size: inherit;
  font-family: inherit;
  font-weight: 500;
  padding: 7px 10px;
  color: var(--color-secondary);
  background-color: var(--font-color);
}

.btn-link {
  background-color: transparent;
  color: var(--font-color);
  box-shadow: none;
  border: none;
}

.theme-dark .btn,
.btn:hover,
.btn:focus {
  background-color: transparent;
  color: var(--font-color);
  border-color: var(--font-color);
}

.btn:hover,
.btn:focus {
  transform: translateY(-6px);
}

.add-notes {
  width: 45px;
  font-size: 16px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.search-notes {
  width: 100%;
  overflow: hidden;
  padding: 10px 15px;
}

.search-notes__icon,
.add-notes {
  color: var(--color-gray);
}

.search-notes__icon:hover,
.add-notes:hover {
  color: var(--color-primary);
}

.search-notes > form {
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 10px;
}
/* Search and Add Notes */

/* Search Notes Input Box */
.search-notes__input-box {
  background-color: transparent;
  border: none;
  outline: none;
  font-size: inherit;
  font-family: inherit;
  line-height: inherit;
  color: var(--color-primary);
}

.search-notes__input-box::placeholder {
  transition: inherit;
  color: var(--color-gray);
}

.search-notes__input-box:focus::placeholder {
  color: transparent;
}
/* Search Notes Input Box */

/* Section divider */
.divider {
  width: 100%;
  background-color: var(--color-primary);
  height: 1.5px;
  border-radius: 40px;
}

/* Notes Item Container */
.notes-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 20px;
}

.note-item__container {
  width: 100%;
  max-width: 760px;
  margin: 0 auto;
  padding: 15px 20px;
}

.note-item,
.edit-note .edit-note__body {
  border-radius: 7px;
  border: 2px solid rgba(0, 0, 0, 0.15);
  background-color: var(--color-white);
}

.note {
  width: 100%;
  margin-top: 30px;
}

.theme-dark .note-item {
  background-color: rgba(0, 0, 0, 0.25);
}

.note-item .note-item__title {
  margin-bottom: 13px;
}

.note-item .note-item__title > a {
  font-size: 22px;
  line-height: 28px;
  color: var(--color-primary);
  text-decoration: none;
}

.note-item .note-item__body {
  line-height: 22px;
  margin-bottom: 13px;
  color: var(--font-color);
}

.note-item .note-item__link {
  color: var(--color-gray);
}

.note-item .note-item__link:hover {
  color: var(--color-primary);
}

.note-tools-container {
  display: flex;
  justify-content: space-between;
  padding-top: 8px;
}

.note-date {
  font-family: 'Nunito', 'sans-serif';
  color: var(--color-primary);
}

.note-options {
  display: flex;
  gap: 15px;
}

.note-options .option {
  color: var(--color-primary);
}

.note .note-tools-container {
  margin-bottom: 20px;
}

.note .note__title,
.delete-note .delete-note__confirm {
  font-size: 34px;
  line-height: 42px;
  margin-bottom: 13px;
  color: var(--color-primary);
}

.note .note__body {
  color: var(--font-color);
  margin-bottom: 25px;
}

.edit-note > form {
  display: flex;
  flex-direction: column;
  gap: 25px;
}

.edit-note .edit-note__body,
.edit-note .edit-note__title {
  color: var(--color-primary);
  font-family: inherit;
  background-color: transparent;
  outline: none;
}

.edit-note .edit-note__title {
  padding: 3px;
  font-size: 30px;
  line-height: 38px;
  border: none;
  border-bottom: 2px solid var(--color-gray);
}

.edit-note .edit-note__title::placeholder {
  transition: inherit;
  color: var(--color-gray);
  font-weight: 100;
}

.edit-note .edit-note__title:focus {
  border-bottom-color: var(--color-primary);
}

.edit-note .edit-note__body:focus::placeholder,
.edit-note .edit-note__title:focus::placeholder {
  color: transparent;
}

.edit-note .edit-note__body {
  resize: vertical;
  min-height: 500px;
  padding: 10px;
  font-size: inherit;
  line-height: inherit;
}

.edit-note .edit-note__body:focus {
  border-color: var(--color-primary);
}

.delete-note .delete-note__title {
  font-weight: 100;
  font-size: 26px;
  line-height: 34px;
  color: var(--color-primary);
}

.delete-note > form {
  margin-top: 35px;
  display: flex;
  align-items: center;
  gap: 15px;
}

/* responsive-medium */
@media only screen and (max-width: 768px) {
  .logo-text {
    font-size: 24px;
    line-height: 32px;
  }

  .logo-text::after {
    bottom: -3px;
    height: 1.5px;
  }

  .note-item__container {
    padding: 10px 0;
    margin-top: 0;
  }

  .note-item {
    padding: 10px 15px;
  }

  .note .note-tools-container {
    margin-bottom: 10px;
  }

  .note .note__title {
    font-size: 29px;
    line-height: 37px;
    margin-bottom: 10px;
  }

  .edit-note {
    gap: 20px;
  }

  .delete-note .delete-note__confirm {
    font-size: 26px;
    line-height: 34px;
    margin-bottom: 10px;
  }

  .delete-note .delete-note__title {
    font-size: 20px;
    line-height: 28px;
  }
}

/* responsive-small */
@media only screen and (max-width: 565px) {
  .header {
    margin: 5px auto;
  }

  .search-notes {
    margin-bottom: 25px;
  }
}

